--- a/public/index.html
+++ b/public/index.html
@@ -18,17 +18,11 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>WebCraft - Creation de Sites et Applications</title>
+    <title>WEBIW</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      C’est ici que React va “monter” toute ton application.
-
-favicon.ico, logo192.png, etc. → les icônes de ton site.
-
-Tu peux aussi y mettre des images globales ou un robots.txt.
-    -->
+  
   </body>
 </html>
